The actual final update to the LaTeX source that has a missing character

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -155,7 +155,7 @@ I experimented with changing various hyperparameters to optimize accuracy—incl
     3, 4, 5 & 0.4038888886570930 & 0.820636357773434 \\
     4, 5, 6 & 0.2844444442954328 & 0.6822727299549363 \\
     \bottomrule
-  \end{tabular
+  \end{tabular}
 \end{table}
 
 \newpage
